[package]
name = "rust_aoc2020"
version = "0.1.0"
authors = ["Sigurd Øines <sigurdoines@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[dev-dependencies]
criterion = "0.3.3"

[[bin]]
name = "aoc2020"
path = "src/bin/main.rs"
bench = false

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false
