[package]
name = "rust_aoc2021"
version = "0.1.0"
authors = ["Sigurd Øines <sigurdoines@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
libmath= "0.2.1"
conditional = "0.1.1"

[dev-dependencies]
criterion = "0.3.3"

[[bin]]
name = "aoc2021"
path = "src/bin/main.rs"
bench = false

[[bench]]
name = "day02"
harness = false